# trivial_i18n

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: english.properties  german.properties  no_std_test.rs  swiss_german.properties  test.rs  us_english.properties
